# Utilix

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  ui.rs
src/tools/: base64_encoder.rs  color_converter.rs  date_converter.rs  hash_generator.rs  mod.rs  number_base_converter.rs  password_generator.rs  qr_code_generator.rs  uuid_generator.rs
