[package]
name = "utilix"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.0"
base64 = "0.22.1"
chrono = "0.4.38"
crossterm = "0.28.1"
qrcode = "0.14.1"
rand = "0.8.5"
ratatui = "0.28.0"
sha2 = "0.10.8"
tui-textarea = { version = "0.6.1", default-features = false, features = [
    "termion",
] }
uuid = { version = "1.10.0", features = ["v4"] }
